# sbc15_msgs

./: CMakeLists.txt  package.xml
action/: CupGripp.action  MoveManipulator.action  MoveManipulatorEeffFrame.action  MoveManipulatorGripperFrame.action  MoveManipulatorHightOffset.action  Play.action  PreGrab.action  visual_servoing.action
msg/: Object.msg  Object.msg~  ObjectsCenter.msg  Segment.msg  Segments.msg
srv/: GetObjects.srv  GripperServices.srv  PreplannedTrajectories.srv
