<?xml version="1.0"?>
<package format="2">
  <name>sbc15_msgs</name>
  <version>0.0.0</version>
  <description>This packages bundles all messages used by the SpaceBot Cup packages.</description>

  <maintainer email="sebastian.buck@uni-tuebingen.de">Sebastian Buck</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>control_msgs</depend>
  <depend>actionlib_msgs</depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
  </export>
</package>
